Jenkins/Jenkins-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-deployment
  namespace: jenkin
spec:
  selector:
    matchLabels:
      app: jenkins
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: public.ecr.aws/bitnami/jenkins:latest
        ports:
        - containerPort: 8080
