Jenkins/service-account.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: jenkin
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/path:   /
      prometheus.io/port:   '8080'
spec:
  selector:
    app: jenkins
  type: NodePort
  ports:
    - port: 5000
      targetPort: 8080
      protocol: "TCP"
#       nodePort: 5000
